# player-stats-backend

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/api/: db.rs  mod.rs  prompts.rs  query.rs  sql.rs  tools.rs
src/api/boxscores/: mod.rs  models.rs  routes.rs
src/llm/: config.rs  mod.rs  prompts.rs  provider.rs
