[package]
name = "player-stats-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
