[package]
name = "player-stats-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
rig-core = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tower-http = { version = "0.6.7", features = ["cors"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
